Fix/user endpoints (#67)
* fix: get user endpoint no longer requires email

* feat: updated endpoint user testing for delete

* feat: uses tokens instead of localstorage for profile page

* accidentally added an extra file
