# backend/app/routes/users.py
@@ -6,7 +6,7 @@ from pydantic import BaseModel
 from app.core.security.basic_auth import hash_password, validate_basic_auth
 from app.core.security.jwt_auth import (
     create_access_token,
-    validate_jwt_token,
+    get_email_from_token,
 )
 from app.database.connections import SessionDep
 from app.models.users import User
@@ -45,35 +45,32 @@ def create_user(
 
 
 @router.delete(
-    "/users/{email_address}",
-    description="Delete an existing user",
-    dependencies=[Depends(validate_jwt_token)],
+    "/users/me",
+    description="Delete the currently authenticated user",
+    dependencies=[Depends(get_email_from_token)],
 )
 def delete_user(
-    email_address: Annotated[str, Path(title="Email address of the user to delete")],
+    email_address: Annotated[str, Depends(get_email_from_token)],
     session: SessionDep,
 ):
-    existing_user = session.get(User, email_address)
-    if not existing_user:
+    user = session.get(User, email_address)
+    if not user:
         raise HTTPException(status_code=404, detail="User not found")
 
-    session.delete(existing_user)
+    session.delete(user)
     session.commit()
 
-    return {
-        "message": f"User with email {existing_user.email_address} deleted successfully."
-    }
+    return {"message": f"User with email {user.email_address} deleted successfully."}
 
 
 @router.get(
-    "/users/{email_address}",
-    description="Get user details by email address",
+    "/users/me",
+    description="Get details of the currently authenticated user",
     response_model=User,
-    dependencies=[Depends(validate_jwt_token)],
+    dependencies=[Depends(get_email_from_token)],
 )
 def get_user(
-    email_address: Annotated[str, Path(title="Email address of the user to retrieve")],
-    session: SessionDep,
+    session: SessionDep, email_address: Annotated[str, Depends(get_email_from_token)]
 ):
     user = session.get(User, email_address)
     if not user:
@@ -102,7 +99,5 @@ def login_user(
     )  # Set cookie to expire in 24 hours
     # TODO - set secure=True and samesite='strict' in production
     return {
-        "message": "Login successful",
-        "access_token": token.access_token,
-        "token_type": token.token_type,
+        "message": "Cookie set successfully",
     }
