# backend/openapi.json
@@ -69,68 +69,13 @@
                         }
                     }
                 }
-            },
-            "delete": {
-                "summary": "Delete User",
-                "description": "Delete an existing user",
-                "operationId": "delete_user_users__email_address__delete",
-                "security": [
-                    {
-                        "Authorization": []
-                    }
-                ],
-                "parameters": [
-                    {
-                        "name": "email_address",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "title": "Email Address"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful Response",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    },
-                    "422": {
-                        "description": "Validation Error",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/HTTPValidationError"
-                                }
-                            }
-                        }
-                    }
-                }
-            },
+            }
+        },
+        "/users/me": {
             "get": {
                 "summary": "Get User",
-                "description": "Get user details by email address",
-                "operationId": "get_user_users__email_address__get",
-                "security": [
-                    {
-                        "Authorization": []
-                    }
-                ],
-                "parameters": [
-                    {
-                        "name": "email_address",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "title": "Email Address"
-                        }
-                    }
-                ],
+                "description": "Get details of the currently authenticated user",
+                "operationId": "get_user_users_me_get",
                 "responses": {
                     "200": {
                         "description": "Successful Response",
@@ -141,14 +86,19 @@
                                 }
                             }
                         }
-                    },
-                    "422": {
-                        "description": "Validation Error",
+                    }
+                }
+            },
+            "delete": {
+                "summary": "Delete User",
+                "description": "Delete the currently authenticated user",
+                "operationId": "delete_user_users_me_delete",
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
                         "content": {
                             "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/HTTPValidationError"
-                                }
+                                "schema": {}
                             }
                         }
                     }
@@ -309,10 +259,6 @@
             }
         },
         "securitySchemes": {
-            "Authorization": {
-                "type": "http",
-                "scheme": "bearer"
-            },
             "HTTPBasic": {
                 "type": "http",
                 "scheme": "basic"
